# RocketMongo

./: .env  Cargo.toml
src/: auth.rs  db.rs  main.rs  middleware.rs  models.rs
