[package]
name = "rocket_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_contrib = { version = "0.4.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
bcrypt = "0.15"
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1.18"
mongodb = "2.6.0"
bson = { version = "2.6.0", features = ["chrono-0_4"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
